--- a/src/main/resources/static/api.yaml
+++ b/src/main/resources/static/api.yaml
@@ -1106,6 +1106,72 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /patients/profile/update:
+    put:
+      tags:
+        - account
+      summary: Update Account
+      description: Patient can change password, once they have verified one of the identifiers.
+      parameters:
+        - name: Authorization
+          description: Token received after successful verification of identifier.
+          in: header
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePatientRequest'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/UpdatePatientRequest'
+      responses:
+        '200':
+          description: Profile updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        '400':
+          description: >
+            **Causes:**
+              * Invalid Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: >
+            **Causes:**
+              * Invalid/expired token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: >
+            **Causes:**
+              * Downstream services are down
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
   /consents/revoke:
     post:
       tags:
@@ -2079,6 +2145,17 @@ components:
         - username
         - password
         - gender
+    UpdatePatientRequest:
+      type: object
+      properties:
+        username:
+          type: string
+          example: raj.sharma@ncg
+        password:
+          type: string
+      required:
+        - username
+        - password
     AuthResponse:
       type: object
       properties:
